Fix vertical alignement of stars on covers Depending the rating and the stars displayed (full, half-full, empty), the start were sometime not aligned at the bottom of the cover.
This fix reduce the space between each stars, so no they fit where
 they supposed.

--- a/src/app/styl/views/browser/item.styl
+++ b/src/app/styl/views/browser/item.styl
@@ -20,7 +20,7 @@
         border-radius: $PosterRadius
         box-shadow: $PosterShadow
         cursor: pointer
-        
+
         &.empty
             background-image none
 
@@ -102,7 +102,7 @@
 
                 .rating-star
                     color #ffc900
-                    padding-right: 2px
+                    padding-right: 0px
                     vertical-align middle
 
                 .rating-star-half
@@ -116,14 +116,14 @@
                 .rating-star-empty
                     color #a3a5a7
                     vertical-align middle
-                    margin-right 2px
+                    margin-right 0px
 
                 .rating-star-half-container
                     width 1em
                     height 1em
                     line-height 1em
                     vertical-align middle
-                    margin-right 2px
+                    margin-right 1px
 
             .rating-value
                 font-size 1em
